// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scrollIntoView test > desktop > scrolls by default the element to the top 1`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -550,
          "y": -30,
        },
      ],
      "id": "action1",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > desktop > scrolls element using scroll into view options 1`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -275,
          "y": -385,
        },
      ],
      "id": "action4",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > desktop > scrolls element when using boolean scroll options 1`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -550,
          "y": -30,
        },
      ],
      "id": "action2",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > desktop > scrolls element when using boolean scroll options 2`] = `
{
  "actions": [
    {
      "actions": [
        {
          "deltaX": 0,
          "deltaY": 0,
          "duration": 0,
          "origin": {
            "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
          },
          "type": "scroll",
          "x": -550,
          "y": -770,
        },
      ],
      "id": "action3",
      "parameters": {},
      "type": "wheel",
    },
  ],
}
`;

exports[`scrollIntoView test > mobile Android app > does not find the default scroll element 1`] = `
"Default scrollable element '//android.widget.ScrollView' was not found. Our advice is to provide a scrollable element like this:

        await elem.scrollIntoView({ scrollableElement: $('#scrollable') });

        "
`;

exports[`scrollIntoView test > mobile Android app > scrolls by default the element to the top 1`] = `
{
  "args": [
    {
      "direction": "down",
      "elementId": "scrollable-element-id",
      "percent": 0.5,
    },
  ],
  "script": "mobile: scrollGesture",
}
`;

exports[`scrollIntoView test > mobile ios app > does not find the default scroll element 1`] = `
"Default scrollable element '-ios predicate string:type == "XCUIElementTypeApplication"' was not found. Our advice is to provide a scrollable element like this:

        await elem.scrollIntoView({ scrollableElement: $('#scrollable') });

        "
`;

exports[`scrollIntoView test > mobile ios app > does not find the element after max 5 scrolls 1`] = `
"Element not found within scroll limit of 5 scrolls by scrolling "down". Are you sure the element is within the scrollable element or the direction is correct? You can change the scrollable element or direction like this:

        await elem.scrollIntoView({
            direction: 'left' // posible options are: 'up|down|left|right'
            scrollableElement: $('#scrollable'),
        });

        "
`;

exports[`scrollIntoView test > mobile ios app > scrolls by default the element to the top 1`] = `
{
  "args": [
    {
      "direction": "down",
      "elementId": "scrollable-element-id",
    },
  ],
  "script": "mobile: scroll",
}
`;

exports[`scrollIntoView test > mobile ios app > scrolls in a provided scroll-container to the left 1`] = `"{"using":"css selector","value":"#scrollContainer"}"`;

exports[`scrollIntoView test > mobile ios app > scrolls in a provided scroll-container to the left 2`] = `
{
  "args": [
    {
      "direction": "left",
      "elementId": "some-elem-123",
    },
  ],
  "script": "mobile: scroll",
}
`;
